--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 </head>
 <body >
 
-<div id="shopList" style="width:100vw;position: absolute;bottom: 0;background: #fff;"></div>
+<div id="shopList" style="width:100vw;position: absolute;background: #fff;"></div>
 <div>
-<iframe id="tbIframe" style="width:100vw;" src="https://market.m.taobao.com/app/tb-source-app/campaign/pages/index?wh_weex=true&userId=2089100916&shopId=111481369&pathInfo=/campaign-10827-88.htm#tq"></iframe></div>
+<iframe id="tbIframe" style="width:100vw;height: 100vh" src="https://market.m.taobao.com/app/tb-source-app/campaign/pages/index?wh_weex=true&userId=2089100916&shopId=111481369&pathInfo=/campaign-10827-88.htm#tq"></iframe></div>
 
 </body>
 </html>
